@@ -1,3 +1,6 @@
+* Tue Oct 10 2023 Steven Pritchard <steve@sicura.us> - 0.9.1
+- Use `gh` instead of `hub` in GHA (see https://github.com/actions/runner-images/issues/8362)
+
 * Fri Oct 06 2023 Steven Pritchard <steve@sicura.us> - 0.9.0
 - [puppetsync] Updates for Puppet 8
   - These updates may include the following:
